bonsai: filter for Linux

--- a/.bonsai.yml
+++ b/.bonsai.yml
@@ -5,3 +5,5 @@ builds:
   arch: any
   asset_filename: "assets.tar.gz"
   sha_filename: "sha512-checksums.txt"
+  filter:
+  -  "entity.system.os == 'linux'"
